fixed spacing between h3 and p elements.

--- a/css-three-column-layout/styles.css
+++ b/css-three-column-layout/styles.css
@@ -67,7 +67,7 @@ p {
 }
 
 h3 {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .padding-leftright {
